--- a/image.html
+++ b/image.html
@@ -8,3 +8,7 @@
 <img src="images/1.jpg" alt="Manzara">
 
 <img src="images/2.jpg" alt="Resim">
+
+<a href="http://127.0.0.1:5500/link.html">
+    Link sayfasına dönmek için tıklayınız
+</a>
